Name:                diagramsInputTest
Version:             0.1
Synopsis:            Parse svg files for diagrams
Description:         Parse svg files for the diagrams DSL using xml-conduits.
License:             BSD3
License-file:        LICENSE
Author:              Tillmann Vogt
Maintainer:          diagrams-discuss@googlegroups.com
Copyright:           Tillmann Vogt (2014)
Category:            Graphics, Diagrams
Build-type:          Simple
--Cabal-version:       >=1.6

Executable program1
  Build-depends:      attoparsec >= 0.10
                    , base == 4.*
                    , bytestring
                    , colour
                    , conduit
                    , css-text
                    , directory
                    , diagrams
                    , diagrams-core
                    , diagrams-lib
                    , diagrams-svg
                    , diagrams-input
                    , either
                    , exceptions
                    , filepath 
                    , lucid-svg
                    , monad-control
                    , old-locale
                    , resourcet
                    , split
                    , system-filepath
                    , text
                    , time
                    , transformers
                    , tuple
                    , unordered-containers
                    , void
                    , xml-conduit
                    , xml-types
  Main-Is:            Main.hs
